Removed versioning from pom.xml to get rid of annoying artifact name i.e. artname-0.0.1-SNAPSHOT (still being tagged on from parent version ughh).

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.demo</groupId>
-	<artifactId>mcrsrvc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>get_mcrsrvc</artifactId>
 	<name>mcrsrvc</name>
 	<description>Demo RESTful Microservice project with Spring Boot</description>
 	<properties>
